Modificació de rutes

--- a/mapa/index.html
+++ b/mapa/index.html
@@ -9,13 +9,13 @@
         <style>
             @font-face {
                 font-family: 'Cubecat';
-                src: url('../Minecraft-reloaded.otf') format('opentype');
+                src: url('../../Minecraft-reloaded.otf') format('opentype');
                 font-weight: 400;
             }
 
             @font-face {
                 font-family: 'Cubecat';
-                src: url('../Minecraft-Bold-reloaded.otf') format('opentype');
+                src: url('../../Minecraft-Bold-reloaded.otf') format('opentype');
                 font-weight: 700;
             }
 
@@ -92,7 +92,7 @@
             </header>
 
             <iframe 
-                src="https://script.google.com/macros/s/AKfycbyJwL5txoYp2ZNtNIHvtSRNQogjeTuw3PZ2cHX1TaA6eVBMFERAjCrugyVn1yXpwVNe2A/exec" 
+                src="https://mapa.cubecat.cat/#00_catalunya:19225:0:22386:1500:0:0:0:1:flat" 
                 class="iframe-expand"
                 frameborder="0"
                 allowfullscreen>
